--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <title>Главная</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -13,17 +13,17 @@
   <header>
 
     <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li><a href="/">Студия</a></li>
-        <li><a href="/">Портфолио</a></li>
-        <li><a href="/">Контакты</a></li>
+      <a href="./index.html" class="logo"><span class="logo">Web</span>Studio</a>
+      <ul class="list site-nav">
+        <li><a href="./index.html" class="link">Студия</a></li>
+        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li><a href="/" class="link">Контакты</a></li>
       </ul>
     </nav>
 
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+    <ul class="list contacts-nav">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link"> +38 096 111 11 11</a></li>
     </ul>
 
   </header>
@@ -31,15 +31,15 @@
   <main>
 
 <!-- Блок Герой-->
-    <section>
-      <h1>Эффективные решения <br/> для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+    <section class="section-hero">
+      <h1 class="title-hero">Эффективные решения <br/> для вашего бизнеса</h1>
+      <button type="button" class="hero-button">Заказать услугу</button>
     </section>
 
 <!-- Блок Преимущества -->
-    <section>
-      <h2>Преимущества работы с нами</h2>
-      <ul>
+    <section class="section">
+      <h2 class="section-title">Преимущества работы с нами</h2>
+      <ul class="features">
         <li>
           <h3>Внимание к деталям</h3>
           <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -60,8 +60,8 @@
     </section>
 
 <!-- Блок Чем мы занимаемся -->
-    <section>
-      <h2>Чем мы занимаемся</h2>
+    <section class="section">
+      <h2 class="section-title">Чем мы занимаемся</h2>
       <ul>
         <li><img src="./images/blockscheme.jpg" alt="человек работает над блок-схемой работы сайта" width="370"></li>
         <li><img src="./images/telephonia.jpg" alt="человек работает над дизайном мобильной версии сайта" width="370"></li>
@@ -70,9 +70,9 @@
     </section>
 
 <!-- Блок Наша команда-->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
+    <section class="section-team">
+      <h2 class="section-title">Наша команда</h2>
+      <ul class="team">
         <li>
           <img src="./images/ihordemjanenko.jpg" alt="фотография Игоря Демьяненко" width="270">
           <h3>Игорь Демьяненко</h3>
@@ -99,52 +99,14 @@
   </main>
 
 <!-- Футер сайта -->
-  <footer>
-    <a href="/">WebStudio</a>
-    <ul>
-      <li><a href="https://goo.gl/maps/79tdAXcRNP72xCpw5">г. Киев, пр-т Леси Украинки, 26</a></li>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a href="./index.html" class="logo"><span class="logo">Web</span>Studio</a>
+    <ul class="list">
+      <li><a href="https://goo.gl/maps/79tdAXcRNP72xCpw5" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+      <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="footer-contacts"> +38 096 111 11 11</a></li>
     </ul>
   </footer>
-
-<ul class="menu">
-  <li class="menu-item">
-    <a href="#" class="menu-link">Меню 1</a>
-  </li>
-  <li class="menu-item">
-    <a href="#" class="menu-link">Меню 2 ▼</a>
-    <ul class="sub-menu">
-      <li class="menu-item">
-        <a href="#" class="menu-link">Sub Меню 1</a>
-      </li>
-      <li class="menu-item">
-        <a href="#" class="menu-link">Sub Меню 2 ▼</a>
-        <ul class="sub-menu">
-          <li class="menu-item">
-            <a href="#" class="menu-link">Sub Меню 1</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Sub Меню 2</a>
-          </li>
-          <li class="menu-item">
-            <a href="#" class="menu-link">Sub Меню 3</a>
-          </li>
-        </ul>
-      </li>
-      <li class="menu-item">
-        <a href="#" class="menu-link">Sub Меню 3</a>
-      </li>
-      <li class="menu-item">
-        <a href="#" class="menu-link">Sub Меню 4</a>
-      </li>
-    </ul>
-  </li>
-  <li class="menu-item">
-    <a href="#" class="menu-link">Меню 3</a>
-  </li>
-</ul>
-
 
 
 </body>
