--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -13,7 +17,7 @@
   <header>
 
     <nav>
-      <a href="./index.html" class="logo"><span class="logo">Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
       <ul class="list site-nav">
         <li><a href="./index.html" class="link">Студия</a></li>
         <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -39,7 +43,7 @@
 <!-- Блок Преимущества -->
     <section class="section">
       <h2 class="section-title">Преимущества работы с нами</h2>
-      <ul class="features">
+      <ul class="features list">
         <li>
           <h3>Внимание к деталям</h3>
           <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -62,7 +66,7 @@
 <!-- Блок Чем мы занимаемся -->
     <section class="section">
       <h2 class="section-title">Чем мы занимаемся</h2>
-      <ul>
+      <ul class="list">
         <li><img src="./images/blockscheme.jpg" alt="человек работает над блок-схемой работы сайта" width="370"></li>
         <li><img src="./images/telephonia.jpg" alt="человек работает над дизайном мобильной версии сайта" width="370"></li>
         <li><img src="./images/colorsoption.jpg" alt="человек выбирает цвет из цветовой схемы" width="370"></li>
@@ -72,7 +76,7 @@
 <!-- Блок Наша команда-->
     <section class="section-team">
       <h2 class="section-title">Наша команда</h2>
-      <ul class="team">
+      <ul class="team list">
         <li>
           <img src="./images/ihordemjanenko.jpg" alt="фотография Игоря Демьяненко" width="270">
           <h3>Игорь Демьяненко</h3>
@@ -100,7 +104,7 @@
 
 <!-- Футер сайта -->
   <footer class="footer">
-    <a href="./index.html" class="logo"><span class="logo">Web</span>Studio</a>
+    <a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="logo-footer">Studio</span></a>
     <ul class="list">
       <li><a href="https://goo.gl/maps/79tdAXcRNP72xCpw5" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
       <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
