--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <!-- Футер сайта -->
   <footer class="footer">
     <a href="./index.html" class="footer-logo"><span class="logo-web">Web</span><span class="logo-footer">Studio</span></a>
-    <ul class="footer-list">
+    <ul class="footer-list list">
       <li><a href="https://goo.gl/maps/79tdAXcRNP72xCpw5" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
       <li><a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a></li>
       <li><a href="tel:+380961111111" class="footer-contacts"> +38 096 111 11 11</a></li>
